turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:21: error: reassignment to val
			if ((k = 1 && j = 1) || (k = 1 && j = 2)) maison(0)
                               ^